--- a/style.css
+++ b/style.css
@@ -1,8 +1,39 @@
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+.main {
+  background: lightgrey;
+  display: grid;
+  grid-template-rows: auto auto 1fr;
+  padding: 0;
+  height: 100vh;
   text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+}
+
+.headline {
+  background: #e76f51;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchbar {
+  background: white;
+}
+
+.char-section {
+  background: #264653;
+  color: white;
+  padding-top: 1rem;
 }
